# Quoridor

./: README.md  pyproject.toml
quoridor/: __init__.py
test/: game_test.py
